<resources>
    <string name="app_name">ListMeUp</string>
    <string name="save">Save</string>
    <string name="add_item">Add Item</string>
    <string name="itemName_label">%1\$s</string>
    <string name="category_label">%1\$s</string>
    <string name="acquired_label">Acquired: %1\$s</string>
    <string name="quantity_label">Quantity: %1\$s</string>
    <string name="estimated_cost_label">Estimated Budget: ₱%1\$s</string>
    <string name="total_cost_label">Total Estimated Budget: ₱%s</string>
    <string name="acquired">Acquired</string>
    <string name="item_details">Item Details</string>
    <string name="category">Category</string>
    <string name="item_name">Item Name</string>
    <string name="update_item">Update Item</string>
    <string name="name">Name</string>
    <string name="select_category_prompt">Select Category</string>
    <string name="save_changes">Save Changes</string>
    <string name="quantity">Quantity</string>
    <string name="summary">Summary</string>
    <string name="list_now">List Now</string>
    <string name="todo">TODO</string>
    <string name="current_username">Welcome, %1$s!</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="category_filter_prompt">Filter by category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name1">Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading…</string>

    <string name="database_url">https://listmeup-android.firebaseio.com</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="update_settings">Update Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="add_items">+ Add Items</string>
    <string name="logo_description" />
    <string name="logout_account">Logout Account</string>
</resources>
